--- a/Assignment.html
+++ b/Assignment.html
@@ -10,7 +10,7 @@
   <h2 style="text-align:center;"><i>BSc in EEE</i></h2>
   <span>
     <ul style="list-style-type: none; display: inline-block;">
-      <img src="F:/CT_34 WEB Design/firstclass/bidya.jpg" alt="Picture" style="border:5px solid blue">
+      <img src="bidya.jpg" alt="Picture" style="border:5px solid blue">
     </ul>
     <ul style="list-style-type: none; display: inline-block;">
       <h3>Address: 46/6 Dolkhola Lane, Khulna</h3>
